style.css
body{
	font-family: "TW Cen MT";
	font-size: 30px;
	margin: 0px;
	padding: 0px;
}
#header {
	color: white;
	font-size: 17px;
	text-align: right;
	height: 90px;
	z-index: 999;
	top: 0px;
	left: 0px;
	width: 100%;
	position: fixed;
	
}
#header #links{
	float: right;
	background-color: white;
	opacity: 0.5;
}
li{
	list-style: none;
	display: inline-block;
	padding-right: 40px;
}
li a{
	text-decoration: none;
	color: black;
}
#main{
	text-align: center;
	font-size: 59px;
	font-weight: 800;
	padding: 10px;
	padding-top: 80px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	height: 700px;
}
#timetable_box{
	font-size: 49px;
	width: 100%;
	height: 850px;
}
#timetable{
	font-size: 27px;
	background-color: #e9f0f0;
	/*border: 2px solid black;*/
	margin-left: auto;
	margin-right: auto;
	width: 90%;
}
#courses{
	height: 900px;
	padding: 60px;
}
#todo{
	background-color: #e9f0f0;
	height: 600px;
	padding: 60px;
}
#dates{
	height: 600px;
	text-align: left;
	padding: 60px;
	
}
th, td{
	border-bottom: 1px solid #ddd;
	vertical-align: top;
}
td.chem div{
	background-color: #23bd0b;
	height: 63px;
}
td.chemlab div{
	background-color: #23bd0b;
	height: 150px;
}
td.stat div{
	background-color: #0b80bd;
	height: 42px;
}
td.phil div{
	background-color: #f55b1c;
	height: 83px;
}
td.seng div{
	background-color: #f7db1c;
	height: 42px;
}
td.senglab div{
	background-color: #f7db1c;
	height: 63px;
}
td.csc div{
	background-color: #e81cf7;
	height: 63px;
}
td.csclab div{
	background-color: #e81cf7;
	height: 63px;
}
table.todo_table{
	font-size: 27px;
	table-layout: fixed;
	border-spacing: 27px;
}
h2.dates_head{
	font-size: 59px;
	margin-left: 4%;
	margin-top: 10%;
}
#tests{
	float: left;
	width: 40%;
}
#assignments{
	float: right;
	width: 40%;
}
#footer{
	background-color: white;
}

